@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=2
 PKG_MINOR=6
-PKG_REVISION=12
+PKG_REVISION=13
 PKG_BUILD=1
